--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Application name
 spring.application.name=windsurf-spring-app
+
+# Active profile
+spring.profiles.active=dev
